test/files/neg/t2796.check
t2796.scala:7: warning: Implementation restriction: early definitions in traits are not initialized before the super class is initialized.
  val abstractVal = "T1.abstractVal" // warn
      ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
